--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,6 @@ guru.jms.port=3330
 guru.jms.user=Ron
 guru.jms.password=Burgundy
 spring.profiles.active=dev
-## custom endpoint path in case of conflicts
-## localhost:8080/endpoints/health
-management.context-path=/endpoints
 
-## change concrete endpoint: localhost:8080/endpoint/system/info
-endpoints.info.path=/system/info
+## change connecting port : localhost:8081/health
+management.port=8081
