--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ guru.jms.user=Ron
 guru.jms.password=Burgundy
 spring.profiles.active=dev
 
-## change connecting port : localhost:8081/health
+## change management connecting port : localhost:8081/health
+## application port stays with 8080
 management.port=8081
