--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.activemq.in-memory=true
 spring.activemq.pooled=false
-guru.jms.server=10.10.10.123
-guru.jms.port=3330
-guru.jms.user=Ron
-guru.jms.password=Burgundy
+
 spring.profiles.active=dev
+
+## custom information for the  info actuator
+info.app.encoding=UTF-8
+info.app.java.source=1.8
+info.app.java.target=1.8
+
 
 ## change management connecting port : localhost:8081/health
 ## application port stays with 8080
