--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ info.app.encoding=UTF-8
 info.app.java.source=1.8
 info.app.java.target=1.8
 
+## pretty print json output
+spring.jackson.serialization.indent-output=true
 
 ## change management connecting port : localhost:8081/health
 ## application port stays with 8080
