Remote Shell / Logging
+ added mavin plugin for remote shell
+ added logging class
+ added static log level config in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jackson.serialization.indent-output=true
 ## change management connecting port : localhost:8081/health
 ## application port stays with 8080
 management.port=8081
+
+#logging.level.guru.springframework.services.LogOutputGeneratorService=error
